Move the built-with logo to the left, to avoid overlap with pyscript.com

--- a/ltk/ltk.css
+++ b/ltk/ltk.css
@@ -423,6 +423,6 @@
 .ltk-built-with {
     position: fixed;
     bottom: 10px;
-    right: 12px;
+    left: 12px;
     z-index: 100000;
 }
